src/components/GridBlock/GridBlock.scss
/* @description Generates styles for the Block component */
@import '../../globals/sass/helpers-all';
//   Variables
$rem-pixel: ((1/$g-font-size) * 1rem);

.GridBlock {
    /* Fill space of parent and content set to wrap by default  */
    width: calc(100% + #{($grid-col-gutter * $rem-pixel)});
    flex-grow: 1;
    flex-wrap: wrap;

    /* Set child columns to flex items */
    display: flex;

    /* Reset column padding by negating it w/ Margins */
    padding: 0;
    margin-left: rem-calc($grid-gutter-width * -1);
    margin-right: rem-calc($grid-gutter-width * -1);
}

